tests/NormalTests/paczka1/fuzzy1/95971882.err
Error in line 3: RmPIZk S958 11,7
Error in line 4: RmPIZk A849 70,4
Error in line 10: S770 S721 21,8
Error in line 12: RmPIZk S721 23,4
Error in line 29: p9tic4sn67 S958 64,3
Error in line 27: RmPIZk A849 51,1
Error in line 33: 8K7d S770 9,3
